--- a/covid/index.html
+++ b/covid/index.html
@@ -13,7 +13,8 @@
 <script type="text/javascript">
 var qrcode = new QRCode(document.getElementById("qrcode"), {
 	width : 500,
-	height : 500
+	height : 500,
+	correctLevel : QRCode.CorrectLevel.M
 });
 
 function makeCode () {		
